# opti-freight

./: .gitignore  README.md  check-nft-holders.js  find-5-nft-holders.js  init-sale-simple.sh  update-nft-image.sh
opti-freight-contracts/: Anchor.toml  Cargo.toml  Dockerfile  README.md  anchor-dev.sh  docker-compose.yml  nfts-serie1.json  package-lock.json  package.json  tokens-serie1.json  tsconfig.json
opti-freight-contracts/opti-freight/: Anchor.toml
opti-freight-contracts/programs/asset-nft/: Cargo.toml
opti-freight-contracts/programs/asset-nft/src/: lib.rs
opti-freight-contracts/programs/governance/: Cargo.toml
opti-freight-contracts/programs/governance/src/: lib.rs
opti-freight-contracts/programs/opti-freight/: Cargo.toml
opti-freight-contracts/programs/opti-freight/src/: lib.rs
opti-freight-contracts/programs/primary-market/: Cargo.toml
opti-freight-contracts/programs/primary-market/src/: lib.rs
opti-freight-contracts/programs/returns-distribution/: Cargo.toml
opti-freight-contracts/programs/returns-distribution/src/: lib.rs
opti-freight-contracts/programs/secondary-market/: Cargo.toml
opti-freight-contracts/programs/secondary-market/src/: lib.rs
opti-freight-contracts/scripts/: get-base58-key.js  init-sale-simple.js  initialize-sale.js  initialize-sale.ts  mint-nfts-serie1.ts  mint-tokens-serie1-optimized.ts  test-buy.js
opti-freight-contracts/tests/: opti-freight.test.ts
opti-freight-frontend/: README.md  init-sale-local.ts  next.config.ts  package-lock.json  package.json  test-init-sale.js  test-transaction.js
opti-freight-frontend/src/app/: globals.css  layout.tsx  page.tsx
opti-freight-frontend/src/app/api/init-sale/: route.ts
opti-freight-frontend/src/app/api/transfer-nft/: route.ts
opti-freight-frontend/src/app/app/: layout.tsx  page.tsx
opti-freight-frontend/src/app/app/admin/: page.tsx
opti-freight-frontend/src/app/app/dashboard/: page.tsx
opti-freight-frontend/src/app/app/marketplace/: page.tsx
opti-freight-frontend/src/app/app/portfolio/: page.tsx  page.tsx.tmp.3110.1761173179292
opti-freight-frontend/src/components/: icons.tsx
opti-freight-frontend/src/components/auth/: connect-wallet-button.tsx  login-dialog.tsx  phantom-wallet-button.tsx
opti-freight-frontend/src/contexts/: anchor-context.tsx  auth-context.tsx  language-context.tsx  solana-wallet-provider.tsx  wallet-context.tsx
opti-freight-frontend/src/hooks/: use-asset-nft.ts  use-mint-nft.ts  use-opti-freight.ts  use-primary-market.ts  use-returns-distribution.ts  use-secondary-market.ts  use-solana-wallet.ts
opti-freight-frontend/src/lib/: data.ts  placeholder-images.json
opti-freight-frontend/src/lib/anchor/: anchor-client.ts  program-ids.ts  types.ts
opti-freight-frontend/src/lib/anchor/idl/: asset_nft.json  secondary_market.json
opti-freight-frontend/src/lib/idl/: opti_freight.json  primary_market.json  returns_distribution.json  secondary_market.json
