[workspace]
members = [
    "programs/opti-freight",
    "programs/primary-market",
    "programs/secondary-market",
    "programs/returns-distribution",
    "programs/asset-nft",
]
exclude = [
    "programs/governance",  # Excluded - has dependency issues
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"  # Optimize for size
strip = true     # Strip symbols to reduce size

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
