[package]
name = "asset-nft"
version = "0.1.0"
description = "Trailer Asset NFT Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
