[package]
name = "returns-distribution"
version = "0.1.0"
description = "Returns Distribution Program"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "returns_distribution"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
